setup-kubernetes/manifests/hello-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello.hvt.zone
    http:
      paths:
      - path: "/"
        backend:
          serviceName: hello
          servicePort: 80
